fix: add overflow-hidden to body

--- a/src/globals.css
+++ b/src/globals.css
@@ -126,7 +126,7 @@
 	}
 
 	body {
-		@apply text-foreground overscroll-none antialiased;
+		@apply text-foreground overflow-hidden overscroll-none antialiased;
 	}
 }
 
